--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "sunnysideup/elemental-can-view",
   "type": "silverstripe-vendormodule",
-  "description": "Helps CMS Users navigate through tabs in Elemental CMS Interface by providing clickable links to switch tabs.",
+  "description": "Allows for more refined can view scenarios for elemental blocks.",
   "keywords": [
     "Silverstripe-CMS",
     "CMS",
