--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "field"
   ],
   "require": {
-    "silverstripe/framework": "^4.0",
+    "silverstripe/framework": "^4.0 || ^5.0",
     "dnadesign/silverstripe-elemental": "^4.0"
   },
   "minimum-stability": "dev",
